# kv-store

./: Procfile  README.md  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: ci.yaml
kv_store/: __init__.py  cli.py  client.py
kv_store/api/: errors.py  main.py  repository.py
kv_store/api/repository/: __init__.py  core.py
tests/: conftest.py  test_api.py  test_client.py  test_repository.py
