[tool.poetry]
name = "kv-store"
version = "0.0.1"
description = "Simple Key Value store and API"
authors = ["Gabriel Gore <gabriel59kg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
starlite = "^1.3.9"
httpx = "^0.23.0"
glom-dict = "^0.0.2-alpha.0"
uvicorn = "^0.17.6"
gunicorn = { version = "^20.1.0", markers = "sys_platform != 'win32'"}

[tool.poetry.dev-dependencies]
invoke = "^1.7.1"
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.14.1"
pytest-sugar = "^0.9.4"
pytest-asyncio = "^0.18.3"
pytest-icdiff = "^0.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = "kv_store"
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=kv_store --cov-report term"
